fixed overflow problem and added pics for header

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+html,body{
+    margin:0;
+}
+
 body{
     background-color: rgba(240, 235, 235); /* //rgb(224, 224, 224);  rgb(35, 80, 148); */
     font-family: Verdana, Geneva, Tahoma, sans-serif; 
@@ -8,13 +12,34 @@ body{
 }
 
 
+.header{
+    max-width: 100%;
+    height: 100vh;  
+    background-color: rgb(146, 203, 255);
+    position: relative;    
+    overflow: hidden;
+}
+
+#wCloud1, #wCloud2, #wCloud3, #wCloud4, #gCloud1, #gCloud2{
+    position: absolute;
+    width: 65%;
+    height: 100%;
+}
+
+#wCloud1{
+    z-index: 3;
+    bottom: -300px;
+    left: -300px;
+}
+
 
 .main{
+    z-index: 99;
     width: 1200px;
     height: auto;
     margin: 0 auto;
     display: grid;
-    grid-template: "header" auto
+    grid-template: /* "header" auto */
                     "nav" auto
                     "presentation1" auto
                     "presentation2" auto
@@ -23,7 +48,9 @@ body{
     opacity: 0.98;
     background-color: rgb(238, 238, 238);
     
-}
+}   
+
+
 
 .header-section{
     grid-area: header;
@@ -116,6 +143,10 @@ body{
     padding: 5px 9%;    
     background-color: rgb(252, 247, 247);
     font-weight: bold;
+}
+
+.company-presentation{
+    overflow: hidden;
 }
 
 .company-presentation1{
